--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,6 +47,7 @@ color:var(--primary-font-color);
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    color: var(--primary-font-color);
 }
 
 .header-link:hover,
@@ -69,6 +70,7 @@ color:var(--primary-font-color);
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
+    text-transform: uppercase;
     color:var(--third-font-color);
     }
 
@@ -142,7 +144,7 @@ color:var(--primary-font-color);
 
 /* ------------------------PORTFOLIO----------------------------- */
 
-.filter-btn {
+.galery-filter-btn {
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -153,8 +155,23 @@ color:var(--primary-font-color);
     cursor: pointer;
 }
 
-.filter-btn:hover,
-.filter-btn:focus {
+.galery-filter-btn:hover,
+.galery-filter-btn:focus {
     background-color:var(--first-background-color);
     color: var(--third-font-color);
+}
+
+.galery-list-title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
+    color: var(--primary-font-color)
+}
+
+.galery-list-subtitle {
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--secondary-font-color);
 }
